--- a/site/src/views/error.ejs
+++ b/site/src/views/error.ejs
@@ -1,1 +1,16 @@
-<h1>Error404</h1>
+<!DOCTYPE html>
+<html>
+    <%- include('./partials/head') %>
+
+<body>
+    <%- include('./partials/header') %>
+
+    <main class="loginForm">
+        
+
+
+    </main>
+    
+    <%- include('./partials/footer') %>
+</body>
+</html>
