--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -1,31 +1,29 @@
 <!-- Footer -->
-<footer class="footer">
+<footer>
     <div class="newsblock">
-            <h2 class="newsblock__content__title margin-zero">DeportShopia</h2>
+            <h2 class="margin-zero">DeportShopia</h2>
     </div>
-
-        <div class="linksblock__icons">
-            <div class="linksblock__icons__social">
-                <button class="linksblock__icons__social__btn"><a href="https://m.facebook.com/?locale2=es_LA" target="_blank"><img src="/images/facebook.png" alt="logoFacebook"></a></button>
-                <button class="linksblock__icons__social__btn"><a href="https://twitter.com/?lang=es" target="_blank"><img src="/images/twitter.png" alt="logoTwitter"></a></button>
-                <button class="linksblock__icons__social__btn"><a href="https://www.instagram.com/?hl=es" target="_blank"><img src="/images/instagram.png" alt="logoInstagram"></a></button>
-            </div>
-            <div class="linksblock__icons__cert">
-                <div class="linksblock__icons__cert__logo item1"><img src="/images/adidas.png" height="48" weight="8" alt="logoAdidas"></div>
-                <div class="linksblock__icons__cert__logo item2"><img src="/images/puma.png" height="48" weight="8" alt="logoPuma"></div>
-                <div class="linksblock__icons__cert__logo item3"><img src="/images/reebok.png" height="48" weight="8" alt="logoAdidas"></div>
-                <div class="linksblock__icons__cert__logo item4"><img src="/images/underarmour.png" height="48" weight="8" alt="logoAdidas"></div>
-                <div class="linksblock__icons__cert__logo item5"><img src="/images/converse.png" height="48" weight="8" alt="logoAdidas"></div>
-                <div class="linksblock__icons__cert__logo item6"><img src="/images/vans.png" height="48" weight="8" alt="logoAdidas"></div>
-                <div class="linksblock__icons__cert__logo item7"><img src="/images/atletica.png" height="48" weight="8" alt="logoAdidas"></div>
-                <div class="linksblock__icons__cert__logo item8"><img src="/images/pirma.png" height="48" weight="8" alt="logoAdidas"></div>
-                <div class="linksblock__icons__cert__logo item9"><img src="/images/adidas.png" height="48" weight="8" alt="logoAdidas"></div>
-            </div>
-
+    
+    <div class="linksblock__icons">
+        <div class="linksblock__icons__social">
+            <button class="linksblock__icons__social__btn"><a href="https://m.facebook.com/?locale2=es_LA" target="_blank"><img src="/images/facebook.png" alt="logoFacebook"></a></button>
+            <button class="linksblock__icons__social__btn"><a href="https://twitter.com/?lang=es" target="_blank"><img src="/images/twitter.png" alt="logoTwitter"></a></button>
+            <button class="linksblock__icons__social__btn"><a href="https://www.instagram.com/?hl=es" target="_blank"><img src="/images/instagram.png" alt="logoInstagram"></a></button>
         </div>
-
+        <div class="linksblock__icons__cert">
+            <div class="linksblock__icons__cert__logo item1"><img src="/images/adidas.png" alt="logoAdidas"></div>
+            <div class="linksblock__icons__cert__logo item2"><img src="/images/reebok.png" alt="logoReebok"></div>
+            <div class="linksblock__icons__cert__logo item3"><img src="/images/underarmour.png" alt="logoUnderArmour"></div>
+            <div class="linksblock__icons__cert__logo item4"><img src="/images/converse.png" alt="logoConverse"></div>
+            <div class="linksblock__icons__cert__logo item5"><img src="/images/vans.png" alt="logoVans"></div>
+            <div class="linksblock__icons__cert__logo item6"><img src="/images/atletica.png" alt="logoAtlética"></div>
+            <div class="linksblock__icons__cert__logo item7"><img src="/images/joma.png" alt="logoJoma"></div>
+            <div class="linksblock__icons__cert__logo item8"><img src="/images/puma.png" alt="logoPuma"></div>
+            <div class="linksblock__icons__cert__logo item9"><img src="/images/pirma.png" alt="logoPirma"></div>
+        </div>
     </div>
-    <div class="footnoteblock">
+
+    <div class="newsblock">
         <p>(C) DeportShopia Todos los derechos reservados, 2022</p>
     </div>
 </footer>
