--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -7,17 +7,18 @@
                 <img class="navbar__logo" loading="lazy" src="/images/min/logos/main-logo.png" alt="logo DeportShopia">
             </picture>
         </a>
-        <a class="navbar__link navbar__link--active" href="#">Ofertas!</a>
-        <a class="navbar__link" href="/products">Productos</a>
-        <a class="navbar__link" href="/products/create">Vender</a>
+        <a class="navbar__link navbar__link--active" href="/products/offers">Ofertas!</a>
         <a class="navbar__link" href="/products/men">Hombre</a>
         <a class="navbar__link" href="/products/women">Mujer</a>
         <a class="navbar__link" href="/products/kids">Niñ@s</a>
     
         <div class="linksblock__icons__social">
-                <button class="linksblock__icons__social__btn"><a href="https://m.facebook.com/?locale2=es_LA" target="_blank"><img src="/images/buscar.png" alt="logoFacebook"></a></button>
+                <button class="linksblock__icons__social__btn"><a href="/search"><img src="/images/buscar.png" alt="logoFacebook"></a></button>
                 <button class="linksblock__icons__social__btn"><a href="/login"><img src="/images/user.png" alt="logoTwitter"></a></button>
                 <button class="linksblock__icons__social__btn"><a href="/cart"><img src="/images/carrito.png" alt="logoInstagram"></a></button>
         </div>
+
+        <!--<a class="navbar__link" href="/products">Productos</a>
+        <a class="navbar__link" href="/products/create">Vender</a>-->
     </nav>
 </header>
